# auth-with-cognito

./: .gitignore  pyproject.toml
aimelodydemo/: main.py
aimelodydemo/core/: config.py  database.py  dependencies.py  schemas.py
aimelodydemo/models/: user_model.py
aimelodydemo/routes/: user.py
aimelodydemo/services/: user_service.py
core/: config.py  database.py  dependencies.py  schemas.py
legacy/: user_service_legacy.py  user_view_legacy.py
models/: user_model.py
routes/: user.py
server/: main.py
services/: cognito_idp_wrapper.py  user_service.py
